syntax = "proto3";

package serverless.instrumentation.tags.v1;

option go_package = ".;protoc";

message HttpTags {
  reserved 5, 7, 10, 11;
  reserved "query", "request_headers", "response_headers", "response_header_names";

  // The method of the HTTP Request
  string method = 1;
  // The protocol of the HTTP Request
  string protocol = 2;
  // The host of the HTTP Request
  string host = 3;
  // The path of the HTTP Request
  string path = 4;
  // Names of the query parameters
  repeated string query_parameter_names = 6;
  // Request header names
  repeated string request_header_names = 8;
  // Request body
  optional string request_body = 13;

  // The Response Status Code.
  optional uint32 status_code = 9;
  // Eventual request error code
  optional string error_code = 12;
  // Response body
  optional string response_body = 14;

}

